add jsx testing code for fs-course part1 + restructure repo

--- a/full-stack-course/part1/index.html
+++ b/full-stack-course/part1/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/Passing state - to child components/main.jsx"></script>
+    <script type="module" src="/src/d A more complex state, debugging React apps/Handling Arrays/main.jsx"></script>
   </body>
 </html>
