add html table basics js testing code

--- a/full-stack-course/part1/index.html
+++ b/full-stack-course/part1/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="src/d A more complex state, debugging React apps/Do Not Define Components Within Components/main.jsx"></script>
+    <script type="module" src="src/e HTML table basics/main.jsx"></script>
   </body>
 </html>
